[gd_scene load_steps=23 format=3 uid="uid://bbycrjo4mhso7"]

[ext_resource type="Script" uid="uid://b00uhdibhx55e" path="res://scenes/game/player/player.gd" id="1_4m2od"]
[ext_resource type="Material" uid="uid://dh3kei8ytrfyo" path="res://assets/common/bilinear.tres" id="1_t5cse"]
[ext_resource type="Texture2D" uid="uid://doyyj3jfv73kl" path="res://assets/tiles/cowman.png" id="3_bkoau"]
[ext_resource type="Texture2D" uid="uid://dlly0e4ol7yo2" path="res://assets/tiles/cowman-walk.png" id="4_abehh"]
[ext_resource type="Texture2D" uid="uid://sj4sokpo0tcr" path="res://assets/tiles/0.png" id="5_i0dnl"]
[ext_resource type="Texture2D" uid="uid://dco04o0uyupd6" path="res://assets/tiles/cowman-fall.png" id="5_ixkur"]
[ext_resource type="Texture2D" uid="uid://twnby5rc7ts4" path="res://assets/tiles/cowman-jump.png" id="5_sxkrj"]
[ext_resource type="Texture2D" uid="uid://d16ewxee2umhl" path="res://assets/tiles/45.png" id="6_sxkrj"]
[ext_resource type="Texture2D" uid="uid://cc4nlps4hydp5" path="res://assets/tiles/90.png" id="7_ixkur"]
[ext_resource type="Texture2D" uid="uid://ca0cwbvyasin3" path="res://assets/tiles/135.png" id="8_jvpd5"]
[ext_resource type="Texture2D" uid="uid://clujynntn1dsg" path="res://assets/tiles/180.png" id="9_t5vmf"]
[ext_resource type="Texture2D" uid="uid://bgccu1phm2irv" path="res://assets/tiles/225.png" id="10_34lq7"]
[ext_resource type="Texture2D" uid="uid://buwtkaxh26vss" path="res://assets/tiles/270.png" id="11_hs005"]
[ext_resource type="Texture2D" uid="uid://debf4pcgehxy0" path="res://assets/tiles/315.png" id="12_g11kp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_prej5"]
atlas = ExtResource("4_abehh")
region = Rect2(0, 0, 11, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqfck"]
atlas = ExtResource("4_abehh")
region = Rect2(11, 0, 11, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmc11"]
atlas = ExtResource("4_abehh")
region = Rect2(22, 0, 11, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvpd5"]
atlas = ExtResource("5_ixkur")
region = Rect2(0, 0, 18, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5vmf"]
atlas = ExtResource("5_ixkur")
region = Rect2(18, 0, 18, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_ywish"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prej5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqfck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmc11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqfck")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvpd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5vmf")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_sxkrj")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_t5vmf")
}, {
"duration": 1.0,
"texture": ExtResource("8_jvpd5")
}, {
"duration": 1.0,
"texture": ExtResource("7_ixkur")
}, {
"duration": 1.0,
"texture": ExtResource("6_sxkrj")
}, {
"duration": 1.0,
"texture": ExtResource("5_i0dnl")
}, {
"duration": 1.0,
"texture": ExtResource("12_g11kp")
}, {
"duration": 1.0,
"texture": ExtResource("11_hs005")
}, {
"duration": 1.0,
"texture": ExtResource("10_34lq7")
}],
"loop": false,
"name": &"spin",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_abehh"]
radius = 5.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bkoau"]
radius = 5.0
height = 22.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
material = ExtResource("1_t5cse")
collision_layer = 3
collision_mask = 3
script = ExtResource("1_4m2od")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 3
texture_filter = 1
material = ExtResource("1_t5cse")
position = Vector2(0, -11.5)
texture = ExtResource("3_bkoau")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 3
texture_filter = 1
material = ExtResource("1_t5cse")
position = Vector2(0, -11.5)
sprite_frames = SubResource("SpriteFrames_ywish")
animation = &"fall"
frame_progress = 0.355383

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_abehh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(36, -27)
position_smoothing_enabled = true
drag_vertical_enabled = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.08
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 66
collision_mask = 64

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_bkoau")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_abehh")

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
